--- a/resources/sass/front.scss
+++ b/resources/sass/front.scss
@@ -1,28 +1,14 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
-// Variables
-@import 'variables';
+// Partials
 
-// RESET
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+@import 'partials/reset';
+@import 'partials/layout';
+@import 'partials/commons';
+@import 'partials/text';
 
 body {
   font-family: "Nunito", sans-serif;
 }
 
-.container {
-  max-width: 1200px;
-  margin: 2rem auto;
-  overflow: hidden;
-  
-  @media screen and (min-width: 900px) {
-    max-width: 800px;
-  }
-}
